Fixes for global statistics.

--- a/TopCard/src/swt/swl/topcard/view/ShowDiagramView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/ShowDiagramView.fxml
@@ -67,7 +67,91 @@
 		</Tab>
       <Tab fx:id="tab3" text="Global">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Pane fx:id="showVoteResultsPane">
+                     <children>
+                        <Label fx:id="voteResultsAmountLabel" layoutY="29.0" prefHeight="27.0" prefWidth="246.0" text="Vote Results : " textFill="#4e0ad8" underline="true" />
+                        <VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="250.0">
+                           <children>
+                              <HBox prefHeight="18.0" prefWidth="229.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
+                                    <Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
+                                    <Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Correct:" />
+                                    <Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                                    <Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Atomic:" />
+                                    <Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="143.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="4.0" layoutY="241.0" prefHeight="94.0" prefWidth="249.0">
+                           <children>
+                              <HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
+                                    <Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
+                                    <Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="144.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Traceable:" />
+                                    <Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                                    <Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="215.0" spacing="10.0">
+                                 <children>
+                                    <Label prefHeight="16.0" prefWidth="130.0" text="Consistent: " />
+                                    <Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="143.0" text="no votes submitted" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <Label layoutX="8.0" layoutY="214.0" prefHeight="27.0" prefWidth="208.0" text="___________Rationale___________" textFill="#4e0ad8" />
+                        <Label layoutX="6.0" layoutY="56.0" prefHeight="27.0" prefWidth="212.0" text="__________Description __________" textFill="#4e0ad8" />
+                        <Label layoutX="6.0" layoutY="462.0" prefHeight="27.0" prefWidth="212.0" text="__________FitCriterion:__________" textFill="#4e0ad8" />
+                        <HBox layoutX="7.0" layoutY="489.0" prefHeight="18.0" prefWidth="210.0">
+                           <children>
+                              <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                              <Label fx:id="fitCriterionCompleteVoteResultLabel" prefHeight="27.0" prefWidth="102.0" text="voteResult" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </Pane>
+               </children></AnchorPane>
         </content>
       </Tab>
 	</tabs>
