--- a/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
@@ -133,7 +133,7 @@
 						</HBox>
 					</children>
 				</VBox>
-				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="943.0" text="_____________________________________________________________________________________________________________________________" />
+				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="943.0" text="________________________________________________________________________________________________________________________________________________" />
 				<Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="257.0" text="Search Requirement Card: " underline="true" />
 				<HBox fx:id="rationalePreciseHBox" layoutX="613.0" layoutY="345.0" prefHeight="26.0" prefWidth="309.0" spacing="10.0" visible="false">
 					<children>
@@ -142,6 +142,7 @@
 						<ComboBox fx:id="descriptionPreciseNumberComboBox" layoutX="119.0" layoutY="10.0" />
 					</children>
 				</HBox>
+            <Label layoutX="71.0" layoutY="6.0" text="hier noch anpassen wie in edit view" textFill="#d70c0c" />
 			</children>
 		</Pane>
 	</content>
